Old updates I forgot to push

--- a/scholarships.html
+++ b/scholarships.html
@@ -78,12 +78,12 @@
             </div>
         </div>
     </header>
-    <section id="parents">
-        <div class="container">
+    <section class="bg-primary" id="ships" style="background-color: #0d6b15;">
+        <div class="container" >
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Current Scholarships</h2>
-                    <hr class="primary">
+                    <hr class="light">
                     <p>
                       Beta Alpha believes strongly investing in our members to allow them to be the best they can be as well as to support our members through college to make being in a fraternity less of a burden.
                     </p><br />
@@ -98,7 +98,7 @@
 					<p>
                       	<a href="https://docs.google.com/forms/d/e/1FAIpQLSd0fnwrKQqoTrL8u4CZBQ0NLixpBI_0Iq9QidDOhVcv11tjXg/viewform?usp=sf_link">Hut-Bader Scholarship ($500)</a>
                     </p><br />
-                    
+
                 </div>
             </div>
         </div>
